--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<ng-container *ngIf="auth">
+<ng-container *ngIf="authService.validateSession()">
   <app-header></app-header>
   <router-outlet></router-outlet>
 </ng-container>
 
-<ng-container *ngIf="!auth">
+<ng-container *ngIf="!authService.validateSession()">
   <router-outlet></router-outlet>
 </ng-container>
