--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <ng-container *ngIf="authService.validateSession()">
+  <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "large" color = "#0275d8" type = "square-jelly-box" [fullScreen] = "true"><p style="color: white" > Loading... </p></ngx-spinner>
   <app-header></app-header>
   <router-outlet></router-outlet>
 </ng-container>
 
 <ng-container *ngIf="!authService.validateSession()">
+  <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "large" color = "#0275d8" type = "square-jelly-box" [fullScreen] = "true"><p style="color: white" > Loading... </p></ngx-spinner>
   <router-outlet></router-outlet>
 </ng-container>
