--- a/src/app/modules/user/components/card-login/card-login.component.html
+++ b/src/app/modules/user/components/card-login/card-login.component.html
@@ -1,7 +1,7 @@
 <div class="card my-3">
   <div class="card-header">
     <h5 class="card-title">Bem-vindo ao <b>Hotelier</b></h5>
-    <form class="mt-3">
+    <form class="mt-3" [formGroup]="form" (ngSubmit)="auth()">
       <div class="form-group">
         <div class="input-group mb-2">
           <div class="input-group-prepend">
@@ -9,7 +9,7 @@
               <fa-icon [icon]="icons.faUser"></fa-icon>
             </div>
           </div>
-          <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Email">
+          <input type="text" class="form-control" placeholder="Email" formControlName="email">
         </div>
       </div>
       <div class="form-group">
@@ -17,15 +17,17 @@
           <div class="input-group-prepend">
             <div class="input-group-text">
               <fa-icon [icon]="icons.faLock"></fa-icon>
-
             </div>
           </div>
-          <input type="password" class="form-control" id="inlineFormInputGroup" placeholder="Password">
+          <input type="password" class="form-control" placeholder="Password" formControlName="password">
         </div>
       </div>
       <div class="col-md-12 text-right">
-        <button type="button" class="btn btn-outline-primary btn-sm" *ngIf="!login">Registar</button>
-        <button type="button" class="btn btn-primary btn-sm mx-1" *ngIf="!login">Entrar</button>
+        <button type="button" class="btn btn-outline-primary btn-sm" *ngIf="!loading">Registar</button>
+        <button type="submit" class="btn btn-primary btn-sm mx-1" *ngIf="!loading">Entrar</button>
+
+        <button type="button" class="btn btn-outline-primary btn-sm" *ngIf="loading" disabled>Registar</button>
+        <button type="submit" class="btn btn-primary btn-sm mx-1" *ngIf="loading" disabled>Entrar</button>
       </div>
 
     </form>
