--- a/src/app/modules/user/components/card-login/card-login.component.html
+++ b/src/app/modules/user/components/card-login/card-login.component.html
@@ -1,7 +1,8 @@
-<div class="card my-3">
-  <div class="card-header">
-    <h5 class="card-title">Bem-vindo ao <b>Hotelier</b></h5>
-    <form class="mt-3" [formGroup]="form" (ngSubmit)="auth()">
+<div class="card d-flex flex-row h-50 mt-5 ">
+ <div class="col-md-6">
+  <div class="card-header h-100 ">
+    <h5 class="card-title mt-5">Bem-vindo ao <b>Hotelier</b></h5>
+    <form class="mt-3" [formGroup]="form" (ngSubmit)="formValidation()">
       <div class="form-group">
         <div class="input-group mb-2">
           <div class="input-group-prepend">
@@ -29,7 +30,10 @@
         <button type="button" class="btn btn-outline-primary btn-sm" *ngIf="loading" disabled>Registar</button>
         <button type="submit" class="btn btn-primary btn-sm mx-1" *ngIf="loading" disabled>Entrar</button>
       </div>
-
     </form>
+  </div>
+ </div>
+  <div class="card-header bg-primary w-100">
+    <!-- <img class="img-fluid" src="assets/login.svg" alt=""> -->
   </div>
 </div>
