--- a/src/app/modules/user/components/card-login/card-login.component.html
+++ b/src/app/modules/user/components/card-login/card-login.component.html
@@ -20,7 +20,7 @@
               <fa-icon [icon]="icons.faLock"></fa-icon>
             </div>
           </div>
-          <input type="password" class="form-control" placeholder="Password" formControlName="password">
+          <input type="password" class="form-control" placeholder="Senha" formControlName="password">
         </div>
       </div>
       <div class="col-md-12 text-right">
